Added functional chat ui